--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.17.1",
+    "axios-jsonp": "^1.0.1",
     "classnames": ">=2.0.0",
     "dom-lib": "^0.2.3",
+    "fetch-jsonp": "^1.1.3",
     "form-lib": "0.0.6",
     "intl": "^1.2.4",
     "isomorphic-fetch": "^2.2.1",
+    "jsonp": "^0.2.1",
     "lodash": "^4.11.1",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
