--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "rsuite": "1.0.14",
+    "rsuite-notification": "^1.0.4",
     "rsuite-schema": "0.0.5",
-    "rsuite-table": "1.1.13",
+    "rsuite-table": "^2.0.1",
     "rsuite-theme": "0.3.30"
   },
   "repository": {
